# rust_learning

./: .gitignore
guessing_game/src/: main.rs
http_server/public/: index.html
http_server/src/: main.rs  server.rs  website_handler.rs
http_server/src/http/: method.rs  mod.rs  query_string.rs  request.rs  response.rs  status_code.rs
todo_app/: Cargo.toml  docker-compose.yaml  requests.http
todo_app/migrations/: 20220920200426_create_todo_table.up.sql
todo_app/src/: lib.rs  main.rs
todo_app/src/domain/: todo.rs
todo_app/src/infrastructure/: api.rs  db.rs  mod.rs
todo_app/tests/: api_test.rs  todos_integration_test.rs
todo_app/tests/common/: app.rs  mod.rs  postgres_container.rs
