[package]
name = "todo_app"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
actix-web = "4.1"
anyhow = "1"
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json"] }
serde = "1"
sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-native-tls", "uuid"] }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
testcontainers = "0.14"
